--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 
         <div id="contact" class="section">
             <h2>Contact Us</h2>
-            <p>For queries or support, reach out to <strong>your-email@example.com</strong>.</p>
+            <p>For queries or support, reach out to <strong>mujtabanaqvi29@gmail.com</strong>.</p>
         </div>
     </div>
 
     <footer>
-        &copy; 2024 Research Article Helper | Built with ❤️ by Your Name
+        &copy; 2024 Research Article Helper | Built with 💻 by Mujtaba
     </footer>
 
 </body>
