--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Research Article Helper | Built with 💻 by Mujtaba</p>
+        <p>&copy; 2024 Research Article Helper | Built with 💻 by Mujtabanaqvi</p>
     </footer>
 
     <script>
